--- a/goober/index.html
+++ b/goober/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://media.tenor.com/aK6MDjODRp8AAAAd/neil-breen-twisted-pair.gif">
+    <meta property="og:image" content="https://media.giphy.com/media/hYHUcErxfZwbK/giphy.gif?cid=790b76119kszmj3vq8thpghh6ovcygl2irtfd7bh14wox8xi&ep=v1_gifs_search&rid=giphy.gif&ct=g">
     
     <!-- Video Link -->
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/merrybith.mp4">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/stopit.mp4">
     
     <!-- Change video width and height to match gif -->
     <meta property="og:video:height" content="360">
